Grammar.g4
grammar Grammar;

/*
 * Parser Rules
 */

compileUnit: expression EOF;

expression:
	LPAREN expression RPAREN									# ParenthesizedExpr
	| expression EXPONENT expression							# ExponentialExpr
	| expression operatorToken = (MULTIPLY | DIVIDE) expression	# MultiplicativeExpr
	| expression operatorToken = (ADD | SUBTRACT) expression	# AdditiveExpr
	| NUMBER													# NumberExpr;

/*
 * Lexer Rules
 */

NUMBER: INT ('.' INT)?;

INT: ('0' ..'9')+;

EXPONENT: '^';
MULTIPLY: '*';
DIVIDE: '/';
SUBTRACT: '-';
ADD: '+';
LPAREN: '(';
RPAREN: ')';

WS: [ \t\r\n] -> channel(HIDDEN);
